syntax = "proto3";

package filestorage;

option go_package = "github.com/PongDev/Go-gRPC-Storage/filestorage/grpc";

message FileUploadRequest {
  bytes file_content        = 1;
  optional string file_name = 2;
}

message FileUploadResponse {
  string file_name = 1;
  uint32 size      = 2;
}

message FileDownloadRequest {
  string file_name = 1;
}

message FileDownloadResponse {
  bytes file_content        = 1;
  optional uint32 size      = 2;
  optional string file_name = 3;
}

service FileUploadService {
  rpc Upload(stream FileUploadRequest) returns (FileUploadResponse);
  rpc Download(FileDownloadRequest) returns (stream FileDownloadResponse);
}